set correct max-width, text-align: center

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,9 @@ body {
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  max-width: 700px;
+  max-width: 660px;
   background-color: #f5f5f5;
+  text-align: center;
 }
 
 h1 {
